--- a/Back end Fundamentals/static/css/new.css
+++ b/Back end Fundamentals/static/css/new.css
@@ -18,12 +18,34 @@ h1{
     margin: 5px 20px
 }
 
+a{
+    text-decoration: none;
+    color: #ffffff;
+    transition: 1s;
+}
+
+.reg{
+    flex: 1;
+    text-align: right;
+    font-size: 20px;
+    margin: 0 20px;
+    transition: 1s; text-decoration: none;
+    color: #ffffff;
+    transition: 1s;
+}
+
+a:hover, .reg:hover{
+    font-size: 23px;
+    color: #de97f0;
+    transition: 1.5s;
+}
+
 main{
     display: flex;
     justify-content: center;
 }
 
-.contenedor{
+.user{
     display: flex;
     justify-content: center;
     background: rgba(255, 255, 255, 0.9);
@@ -46,10 +68,13 @@ input{
     border: none;
     margin-bottom: 20px;
     border-radius: 10px;
-    
     padding-left: 10px;
     color: #7c3c8b;
     font-weight: 600;
+}
+
+input:focus{
+    outline-color: #b7b3b8;
 }
 
 .bordeinterior{
