--- a/Back end Fundamentals/views/index.html
+++ b/Back end Fundamentals/views/index.html
@@ -14,11 +14,11 @@
             <p class="reg"><a href="/new">Registrar Usuario</a></p>
         </nav>
     </header>
-    <main>
-        <div id="users"></div>
+    <main id="show">
     </main>
     <footer>
         <p class="piefooter">Gracias por visitarnos!</p>
     </footer>
+    <script src="/js/user.js"></script>
 </body>
 </html>
