--- a/Back end Fundamentals/views/new.html
+++ b/Back end Fundamentals/views/new.html
@@ -4,30 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reistro</title>
+    <title>Registro</title>
     <link rel="stylesheet" href="/css/new.css">
 </head>
 <body>
     <header></header>
-        <nav>
-            <h1>GESTOR DE USUARIOS</h1>
-        </nav>
+    <nav>
+        <h1>GESTOR DE USUARIOS</h1>
+        <p class="reg"><a href="/">Volver</a></p>
+    </nav>
     <main>
-        <div class="contenedor">
-                <form action="/new" method="post">
+        <div class="user">
+                <form action="/new" method="POST">
                     <h3>Registrar usuario</h3>
                     <label for="nombre">Nombre</label><br>
-                    <input type="text" class="bordeinterior"><br>
+                    <input type="text" name="name" class="bordeinterior"><br>
                     <label for="date">Fecha de nacimiento</label><br>
-                    <input type="date" name="" id="" class="bordeinterior"><br>
+                    <input type="date" name="birthday" id="" class="bordeinterior"><br>
                     <label for="email">Email</label><br>
-                    <input type="email" name="" id="" class="bordeinterior"><br>
+                    <input type="email" name="email" id="" class="bordeinterior"><br>
                     <label for="genero">Genero</label><br>
-                    <input type="text" name="" id="" class="bordeinterior"><br>
+                    <input type="text" name="gender" id="" class="bordeinterior"><br>
                     <label for="profesion">Profesión</label><br>
-                    <input type="text" name="" id="" class="bordeinterior"><br>
+                    <input type="text" name="profession" id="" class="bordeinterior"><br>
                     <label for="salario">Salario</label><br>
-                    <input type="number" name="" id="" class="bordeinterior"><br>
+                    <input type="number" name="salary" id="" class="bordeinterior"><br>
                     <input type="submit" class="submit">
                 </form>
         </div>
