--- a/Back end Fundamentals/static/css/index.css
+++ b/Back end Fundamentals/static/css/index.css
@@ -24,7 +24,7 @@ a{
     transition: 1s;
 }
 
-.reg{
+.registrar{
     flex: 1;
     text-align: right;
     font-size: 20px;
@@ -34,7 +34,7 @@ a{
     transition: 1s;
 }
 
-a:hover, .reg:hover{
+a:hover, .registrar:hover{
     font-size: 23px;
     color: #de97f0;
     transition: 1.5s;
@@ -55,19 +55,38 @@ a:hover, .reg:hover{
     border-radius: 10px;
     box-shadow: 9px 10px 38px -18px rgba(0,0,0,1);
     font-size: 18px;
-    color: #6d2b75; 
+    color: #6d2b75;
+    position: relative; 
+}
+
+.textcard{
+    line-height: 8px;
+}
+
+.imgcard{
+    width: 300px;
+    height: 180px;
+    border-radius: 10px;
+    object-fit: cover;
+    margin-top: 20px;
 }
 
 .nombre{
+    text-align: center;
     font-size: 25px;
     color: #6d2b75; 
     font-weight: bold;
-    letter-spacing: 2px;
+    letter-spacing: 1px;
+    margin: 0
+}
+.finaltext{
+    margin-bottom: 60px;
 }
 
 .btndiv{
-    display: flex;
-    justify-content: space-between;
+    position: absolute;
+    bottom:0px;
+    margin-bottom: 10px;
 }
 
 button{
@@ -91,6 +110,7 @@ button:hover{
 
 .btndel{
     background-color: #ac2f2f;
+    margin-left: 35px;
 }
 
 .btndel:hover{
