--- a/Back end Fundamentals/views/index.html
+++ b/Back end Fundamentals/views/index.html
@@ -11,7 +11,7 @@
     <header></header>
         <nav>
             <h1>GESTOR DE USUARIOS</h1>
-            <p class="reg"><a href="/new">Registrar Usuario</a></p>
+            <p class="registrar"><a href="/new">Registrar Usuario</a></p>
         </nav>
     </header>
     <main id="show">
