--- a/Back end Fundamentals/views/new.html
+++ b/Back end Fundamentals/views/new.html
@@ -18,17 +18,21 @@
                 <form action="/new" method="POST">
                     <h3>Registrar usuario</h3>
                     <label for="nombre">Nombre</label><br>
-                    <input type="text" name="name" class="bordeinterior"><br>
+                    <input type="text" name="name" class="bordeinterior" required><br>
                     <label for="date">Fecha de nacimiento</label><br>
-                    <input type="date" name="birthday" id="" class="bordeinterior"><br>
+                    <input type="date" name="birthday" id="" class="bordeinterior" required><br>
                     <label for="email">Email</label><br>
-                    <input type="email" name="email" id="" class="bordeinterior"><br>
+                    <input type="email" name="email" id="" class="bordeinterior" required><br>
                     <label for="genero">Genero</label><br>
-                    <input type="text" name="gender" id="" class="bordeinterior"><br>
+                    <input type="text" name="gender" id="" class="bordeinterior" required><br>
                     <label for="profesion">Profesión</label><br>
-                    <input type="text" name="profession" id="" class="bordeinterior"><br>
+                    <input type="text" name="profession" id="" class="bordeinterior" required><br>
                     <label for="salario">Salario</label><br>
-                    <input type="number" name="salary" id="" class="bordeinterior"><br>
+                    <input type="number" name="salary" id="" class="bordeinterior" required><br>
+                    <label for="foto">Foto</label><br>
+                    <input type="text" name="picture" id="" class="bordeinterior" required><br>
+                    <label for="about">Pasatiempos</label><br>
+                    <input type="text" name="about" id="" class="bordeinterior" maxlength="120" required><br>
                     <input type="submit" class="submit">
                 </form>
         </div>
