--- a/Back end Fundamentals/views/edit.html
+++ b/Back end Fundamentals/views/edit.html
@@ -15,10 +15,10 @@
     </nav>
     <main>
         <div class="user">
-                <form action="/edit" method="POST">
+                <form action="/edit" method="PUT">
                     <h3>Editar usuario</h3>
                     <label for="nombre">Nombre</label><br>
-                    <input type="text" name="name" class="bordeinterior" ><br>
+                    <input type="text" name="name" class="bordeinterior"  ><br>
                     <label for="date">Fecha de nacimiento</label><br>
                     <input type="date" name="birthday" id="" class="bordeinterior" ><br>
                     <label for="email">Email</label><br>
