--- a/Back end Fundamentals/views/edit.html
+++ b/Back end Fundamentals/views/edit.html
@@ -15,7 +15,7 @@
     </nav>
     <main>
         <div class="user">
-                <form action="/edit" method="PUT">
+                <form action="/edit/:id" method="POST">
                     <h3>Editar usuario</h3>
                     <label for="nombre">Nombre</label><br>
                     <input type="text" name="name" class="bordeinterior"  ><br>
